# terse

./: .coverage  .gitignore  .nextrc.json  AGENTS.md  HEARTBEAT.md  IDENTITY.md  INCOME_MANAGEMENT.md  MEMORY.md  OLS-ROADMAP.md  POSITION_GUARD.md  PositionGuardConfig.json  SKILL.md  SKILLS_COMPACT.md  SOUL.md  TASKS.md  TOOLS.md  USER.md  agent-self-governance.skill  agent-wal.skill  alphastrike_philosophy_review.md  arxiv-config-py.txt  arxiv-env-check.txt  arxiv-ls.txt  audit_result.txt  beach_cn.py  beach_portrait.py  check_status.py  clangd-lsp.skill  create_all_lsp_skills.sh  create_fallback_cover.py  create_lsp_skills.sh  debug_workflow.py  env-check.txt  env-check2.txt  evoclaw.json  fetcher-src.txt  full_migration.sh  full_migration_v2.sh  generate_cover.py  generate_cover_fixed.py  (+31 more)
.clawhub/: lock.json
.openclaw/: workspace-state.json
MyProject/: test_agent.py
Position Guard -- SL/: TP Monitor.txt
alphastrike/: .env  AI_LOGGING.md  CURRENT_RULES_ANALYSIS.md  IMPLEMENTATION_PHILOSOPHY.md  IMPLEMENTATION_REPORT.md  ML_vs_RULES_ANALYSIS.md  NOTIFICATIONS.md  QUICKSTART.md  README.md  SIMULATION_PLAN.md  SMART_MONEY_STRATEGY.md  STRATEGY.md  UPGRADE_v2.0.md  ada_monitor.sh  alphastrike.py  check_ada_risk.sh  compare_v1_v2.py  debug_signals.py  demo.py  diagnose.py  market_data.py  notifications.py  paper_trading_status.sh  run_live.sh  run_paper_trading.py  run_simulation_v2.sh  setup_notifications.py  signals.py  smart_money.py  target_analysis.py  test_v2_sizing.py
arxiv-submission/: Makefile  README.md  SUBMISSION_GUIDE.md  abstract.tex  architecture.tex  arxiv-meta.txt  conclusion.tex  governance.tex  introduction.tex  main.aux  main.bbl  main.blg  main.out  main.tex  references.bib  roadmap.tex  security.tex  tokenomics.tex  usecases.tex
clawinfra/claw-chain/: Cargo.toml
clawinfra/claw-chain/crates/types/: Cargo.toml
clawinfra/claw-chain/crates/types/src/: address.rs  hash.rs  lib.rs
content/: lottery-research-australia.md
data/: identity-map.json
docs/: CLAWCHAIN-DID-INTEGRATION.md
drafts/: ai-coding-agents-production-grade-2026-04-22.md  linkedin-arxiv-to-code-2026-04-23.md
fear-protocol-plan/: PLAN-ITERATION-2.md  PLAN.md  REVIEW.md
health/: nightly-report-2026-03-03.md
image_service/: .env.example  README.md  image_service.py  requirements.txt
memory/: .session_id  2025-02-21.md  2026-01-30.md  2026-02-01.md  2026-02-02.md  2026-02-03.md  2026-02-04.md  2026-02-05.md  2026-02-06.md  2026-02-07.md  2026-02-08-moltbook-posting-attempt.md  2026-02-08.md  2026-02-09-clawchain-deployment-summary.md  2026-02-09.md  2026-02-10.md  2026-02-11-late.md  2026-02-11.md  2026-02-12-DELIVERABLES-COMPLETE.md  2026-02-12-evoclaw-implementation-plan.md  2026-02-12-evoclaw-implementation-summary.md  2026-02-12-evoclaw-tools-architecture.md  2026-02-12.md  2026-02-13.md  2026-02-14.md  2026-02-15.md  2026-02-16-autonomous-execution-complete.md  2026-02-16-autonomy-and-integration-fixes.md  2026-02-16-evoclaw-pr-ready.md  2026-02-16-proper-fixes-applied.md  2026-02-16-router-bug-found.md  2026-02-16-skill-health-check.md  2026-02-16-skill-infrastructure-correction.md  2026-02-16.md  2026-02-17-evoclaw-memory-protocol.md  2026-02-17-evoclaw-routing-fix.md  2026-02-17-memory-retrieval-protocol.md  2026-02-17.md  2026-02-18.md  2026-02-19.md  2026-02-20.md  (+351 more)
papers/: CONVERSION_REPORT.md  CONVERSION_SUMMARY.md  EXPANSION_PLAN.md  TASK_COMPLETE.md  clawchain-figures.tex  clawchain-ieee-sse2026.aux  clawchain-ieee-sse2026.blg  clawchain-ieee-sse2026.out  clawchain-ieee-sse2026.tex  clawchain-ieee.bib  clawchain-paper-enhanced.aux  clawos-paper.aux  (+40 more)
skills/guardrail/: .coverage  .gitignore  README.md  SKILL.md  pyproject.toml
skills/guardrail/config/: domain_allowlist.json  scan_rules.json
skills/guardrail/scripts/: guardrail_cli.py  intake.py  merge.py  review_notifier.py  shield_scan.py
skills/guardrail/tests/: test_intake.py  test_merge.py  test_review_notifier.py  test_shield_scan.py
skills/mbd/: SKILL.md  mbd_cli.py  mbd_client.py  mbd_monitor.py  pyproject.toml  templates.py
skills/mbd/scripts/: article_digest.py  daily_publisher.py  zimage_cover.py
skills/mbd/tests/: test_mbd_cli.py  test_mbd_client.py  test_mbd_monitor.py  test_templates.py
(+463 files in other folders)
