[project]
name = "guardrail"
version = "1.0.0"
description = "Third-party asset vetting pipeline for EvoClaw"
requires-python = ">=3.11"
dependencies = ["click>=8.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["scripts"]
omit = ["scripts/guardrail_cli.py"]
