[package]
name = "claw-types"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
blake3 = { workspace = true }
ed25519-dalek = { workspace = true }
k256 = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
zeroize = { workspace = true }
